# openai-rust-client

./: Cargo.toml  LICENSE  pyproject.toml
docs/: index.html
pytest/: benchmark_data_20251023_132715.json  main.py  openai_benchmark_report_20251023_132715.html  pyproject.toml
src/: lib.rs  openai_client.rs
